# nats-forge

./: Cargo.toml  README.md
examples/: microservice-mesh.json  multi-region-hub-leaf.json  wadm-example.json
hub-output/: SYS-admin.creds  app-service.jwt  nats.conf  operator.jwt
ignored/: APP-app-user.creds  APP.jwt  SYS.jwt  nats.conf  operator.jwt
leaf-output/: SYS.jwt  app-service-service-user.creds  nats.conf
src/: config.rs  lib.rs  main.rs  nsc.rs  server.rs
test-output-validation/: APP-app-user.creds  APP.jwt  SYS.jwt  nats.conf  operator.jwt
tests/: common.rs  example.json  hub_leaf.json  integration.rs  setup_tests.rs  validation_tests.rs
