[package]
name = "natsforge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22.1"
clap = { version = "4.5.32", features = ["derive"] }
dirs = "6.0.0"
futures-util = "0.3.31"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.10"
tokio = { version = "1.36", features = ["full"] }
uuid = { version = "1.15.1", features = ["v4"] }

[dev-dependencies]
async-nats = "0.39.0"
tokio = { version = "1", features = ["full"] }
